<resources>
    <string name="app_name">Perihasi</string>
    <string name="next">LANJUT</string>
    <string name="skip">LEWATI</string>
    <string name="start">MULAI</string>
    <string name="sistem_pakar_perihasi_n">Sistem Pakar PERIHASI</string>
    <string name="konsultasi_masalah_perawatan_ibu_hamil_dan_pendeteksi_penyakit_pada_anak_usia_dini">Konsultasi Masalah Perawatan Ibu Hamil</string>
    <string name="konsultasi">KONSULTASI</string>
    <string name="selamat_datang">SELAMAT DATANG</string>
    <string name="konsultasi1">Konsultasi</string>
    <string name="tips_melahirkan">Tips Melahirkan</string>
    <string name="perkembangan1">Memberikan Informasi Mengenai Perkembangan Bayi Selama 1-9 Bulan</string>
    <string name="berisi_informasi_penyakit_ibu_hamil">Berisi Informasi Penyakit Ibu Hamil</string>
    <string name="ibu_hamil1">Ibu Hamil</string>
    <string name="penyakit1">Penyakit</string>
    <string name="tips_merawat1">Tips Merawat</string>
    <string name="bayi1">Bayi</string>
    <string name="kandungan1">Kandungan</string>
    <string name="e_learning1">E-Learning</string>
    <string name="bantuan1">Bantuan</string>
    <string name="ban1">Pada menu konsultasi, dapat mengetahui gejala penyakit ibu hamil</string>
    <string name="ban2">Pada menu pencarian penyakit ibu hamil terdapat banyak informasi penyakit apa saja yang diderita oleh ibu hamil</string>
    <string name="ban3">Pada menu tips melahirkan terdapat informasi tentang tips-tips melahirkan dengan baik</string>
    <string name="ban4">Pada menu tips merawat bayi terdapat tata cara dalam merawat bayi secara baik</string>
    <string name="ban6">Pada menu e-learning terdapat informasi tentang perkembangan janin selama 9 bulan</string>
    <string name="ban5">Pada menu tips merawat kandungan terdapat suatu informasi tentang bagaimana merawat kandungan dengan baik</string>
    <string name="profile_developer">Profil</string>
    <string name="ban7">Pada menu pengembang terdapat informasi tentang pengembang yang membuat aplikasi perihasi</string>
    <string name="ban8">Pada menu bantuan terdapat informasi tentang pemakaian aplikasi</string>
    <string name="jurusan">S1 Ilmu Komputer</string>
    <string name="fakultas">Fakultas Matematika dan Ilmu Pengetahuan Alam</string>
    <string name="profiledeveloper1">Pengembang</string>
    <string name="gambar">LINK GAMBAR: </string>
    <string name="deskripsi1">DESKRIPSI: </string>
    <string name="referensi">REFERENSI:</string>
    <string name="referensi1">REFERENSI:</string>

    <string name="cari">Pencarian</string>
    <string name="search">Search</string>

    <string name="hal1">1 – 3 Bulan</string>
    <string name="hal2">4 – 6 Bulan</string>
    <string name="hal3">7 – 9 Bulan</string>
    <string name="kandungan">Silahkan Pilih Umur Kandungan :</string>
    <string name="lanjut1">Lanjut</string>

    <string name="uuu">Apa Keluhannya?</string>

    <!--untuk keluhan ibu hamil di pertanyaan-->
    <string name="kel1K">Terasa mual dan muntah, dalam sehari mengalami 5 atau lebih</string>
    <string name="kel2K">Peningkatan air liur 1–2 Liter/hari</string>
    <string name="kel3K">Kepala pusing</string>
    <string name="kel4K">Peningkatan plasma darah sebesar 50%</string>
    <string name="kel4K1">- Peningkatan plasma darah sebesar 50%</string>
    <string name="kel5K">Tekanan darah turun</string>
    <string name="kel6K">hormon progestoren bertambah</string>
    <string name="kel7K">Sedikit beraktivitas dan banyak istirahat</string>
    <string name="kel8K">Rasa terbakar didada</string>
    <string name="kel9K">Buang air kecil siang hari 10 kali dan malam hari 4 kali</string>
    <string name="kel10K">Susah buang air besar</string>
    <string name="kel11K">Kotoran keras</string>
    <string name="kel12K">Perasaan takut hamil</string>
    <string name="kel13K">Perasaan sedih dan cemas</string>
    <string name="kel14K">Menolak kehamilan</string>
    <string name="kel15K">Membenci kehamilan</string>
    <string name="kel16K">Terdapat garis di perut karena membesar</string>
    <string name="kel17K">Terdapat garis di kaki dan tangan</string>
    <string name="kel18K">Merasa dipayudara nyeri</string>
    <string name="kel19K">Payudara mulai menghasilkan air susu yang nantinya akan menyuplai nutrisi bagi bayi, sehingga terkadang rasa nyeri sedikit mengganggu</string>
    <string name="kel20K">Beban terasa berat dikarenakan bayi semakin berkembang</string>
    <string name="kel21K">Nyeri pinggang</string>
    <string name="kel22K">Karena makanan yang pedas dan sakit perut</string>
    <string name="kel23K">Meningkatnya kadar gula darah</string>
    <string name="kel24K">Berat badan bertambah kurang lebih 1 kg dalam 3 bulan</string>
    <string name="kel25K">Hormon progestoren turun </string>
    <string name="kel26K">Kurang tidur</string>
    <string name="kel27K">Banyak pikiran</string>
    <string name="kel28K">Kekawatiran saat persalinan</string>
    <string name="kel29K">Cairan dibawah kaki berlebih</string>
    <string name="kel30K">Kaki membengkak saat banyak beraktivitas</string>
    <string name="kel31K">Bolak balik ke kamar mandi untuk buang air kecil, selama 1 hari kurang lebih 10 kali</string>
    <string name="kel32K">Terdapat garis merah di kaki</string>
    <string name="kel33K">Keluar cairan divagina yang berlebih</string>
    <string name="kel34K">Susah bernafas</string>
    <string name="kel35K">Nafas ngos-ngosan</string>
    <string name="kel36K">Punggung ngilu</string>
    <string name="kel37K">Terasa nyeri di punggung</string>
    <string name="kel38K">Sering mulas tapi hanya sebentar</string>
    <string name="kel39K">Terdapat gerakan didalam perut</string>
    <string name="kel40K">Nyeri keram ringan</string>
    <string name="kel41K">Terasa tertekan dikandungan kemih</string>
    <string name="kel42K">Meningkatnya hormon adrenocorticoid</string>
    <string name="kel43K">Terdapat garis di wajah</string>
    <!--tambahan-->
    <string name="kel48K">PREEKLAMPSIA</string>
    <string name="kel44K">Cairan berlebih</string>
    <string name="J1">Jawab</string>
    <string name="uu">Apa Keluhan Selanjutnya?</string>

    <!--Keluhan Kehamilan deskripsi-->
    <string name="kel1">- Terasa mual dan muntah, dalam sehari mengalami 5 atau lebih</string>
    <string name="kel2">- Peningkatan air liur 1–2 Liter/hari</string>
    <string name="kel3">- Kepala pusing</string>
    <string name="kel4">- Peningkatan plasma darah sebesar 50%</string>
    <string name="kel5">- Tekanan darah turun</string>
    <string name="kel6">- hormon progestoren bertambah</string>
    <string name="kel7">- Sedikit beraktivitas dan banyak istirahat</string>
    <string name="kel8">- Rasa terbakar didada</string>
    <string name="kel9">- Buang air kecil siang hari 10 kali dan malam hari 4 kali</string>
    <string name="kel10">- Susah buang air besar</string>
    <string name="kel11">- Kotoran keras</string>
    <string name="kel12">- Perasaan takut hamil</string>
    <string name="kel13">- Perasaan sedih dan cemas</string>
    <string name="kel14">- Menolak kehamilan</string>
    <string name="kel15">- Membenci kehamilan</string>
    <string name="kel16">- Terdapat garis di perut karena membesar</string>
    <string name="kel17">- Terdapat garis di kaki dan tangan</string>
    <string name="kel18">- Merasa dipayudara nyeri</string>
    <string name="kel19">- Payudara mulai menghasilkan air susu yang nantinya akan menyuplai nutrisi bagi bayi, sehingga terkadang rasa nyeri sedikit mengganggu</string>
    <string name="kel20">- Beban terasa berat dikarenakan bayi semakin berkembang</string>
    <string name="kel21">- Nyeri pinggang</string>
    <string name="kel22">- Karena makanan yang pedas dan sakit perut</string>
    <string name="kel23">- Meningkatnya kadar gula darah</string>
    <string name="kel24">- Berat badan bertambah kurang lebih 1 kg dalam 3 bulan</string>
    <string name="kel25">- Hormon progestoren turun </string>
    <string name="kel26">- Kurang tidur</string>
    <string name="kel27">- Banyak pikiran</string>
    <string name="kel28">- Kekawatiran saat persalinan</string>
    <string name="kel29">- Cairan dibawah kaki berlebih</string>
    <string name="kel30">- Kaki membengkak saat banyak beraktivitas</string>
    <string name="kel31">- Bolak balik ke kamar mandi untuk buang air kecil, selama 1 hari kurang lebih 10 kali</string>
    <string name="kel32">- Terdapat garis merah di kaki</string>
    <string name="kel33">- Keluar cairan divagina yang berlebih</string>
    <string name="kel34">- Susah bernafas</string>
    <string name="kel35">- Nafas ngos-ngosan</string>
    <string name="kel36">- Punggung ngilu</string>
    <string name="kel37">- Terasa nyeri di punggung</string>
    <string name="kel38">- Sering mulas tapi hanya sebentar</string>
    <string name="kel39">- Terdapat gerakan didalam perut</string>
    <string name="kel40">- Nyeri keram ringan</string>
    <string name="kel41">- Terasa tertekan dikandungan kemih</string>
    <string name="kel42">- Meningkatnya hormon adrenocorticoid</string>
    <string name="kel43">- Terdapat garis di wajah</string>
    <string name="kel45K">- Dara tinggi</string>
    <string name="kel46K">- Udema</string>
    <string name="kel47K">- Kelainan organ lain</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--penyakit ibu hamil-->
    <string name="yu1">Hasil Deteksi</string>
    <string name="yu2">Gejala yang anda alami adalah:</string>
    <string name="yu3">Dari gejala-gejala yang Anda pilih, Hasil Kemungkinan Penyakit anda adalah</string>
    <string name="yu4">Deteksi Ulang</string>
    <string name="yu5">Umur Kehamilan :</string>
    <string name="yu6">1-3 Bulan</string>
    <string name="yu7">4-6 Bulan</string>
    <string name="yu8">7-9 Bulan</string>
    <string name="deteksi_ulang">Deteksi Ulang</string>
    <string name="deteksi">Deteksi</string>


</resources>
