<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:background="#c5ecf9"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/view"
        >

        <include
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            layout="@layout/toolbar_layout"
            />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" >

                    <ImageView
                        android:layout_marginTop="10dp"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_alignParentLeft="true"
                        android:src="@drawable/logo"/>
                </TableRow>

            </TableLayout>

            <TextView
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:textColor="#000"
                android:textSize="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uuu"/>


            <RadioGroup
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:id="@+id/GBab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/a6b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kel6K"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:id="@+id/a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kel1K" />

                <RadioButton
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:id="@+id/a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kel2K" />

                <RadioButton
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:id="@+id/a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kel3K" />

                <RadioButton
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:id="@+id/a8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kel8K" />

                <RadioButton
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:id="@+id/a9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kel9K" />


                <RadioButton
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:id="@+id/a12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kel12K" />

            </RadioGroup>


            <Button
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:background="@color/colorPrimary"
                android:id="@+id/jawabab"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:text="Lanjut" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>